--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="
     margin: 0;
-    padding: 0;
+    padding: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
